2004-05-03  Philip Blundell  <philb@gnu.org>

	* Version 0.14 released.
	
2004-05-03  Philip Blundell  <philb@gnu.org>

	* main.c (main): Disable "journal" icon temporarily.

	* Makefile: Update to use PACKAGE_CFLAGS, etc.
	(LINGUAS): Add nl, ga, ru, sr, sk, sv.

2004-04-28  Florian Boor <florian.boor@kernelconcepts.de>

	* Started implementing a display facility.

2003-10-09  Philip Blundell  <philb@gnu.org>

	* Version 0.13 released.
	
2003-10-09  Philip Blundell  <philb@gnu.org>

	* Makefile (LINGUAS): Add cs.

	* familiar/control1: Add Source.

2003-07-27  Phil Blundell  <pb@nexus.co.uk>

	* Makefile (CPPFLAGS) [CVSBUILD=yes]: Add -I../libgpewidget.

	* sql.c: Make schema decl acceptable to GCC 3.3.

2003-07-06  Moray Allan  <moray@sermisy.org>

	* Makefile (install_program): Install .desktop file with .desktop
	filename extension.

2003-06-28  Philip Blundell  <philb@gnu.org>

	* main.c (main): Hook quit to delete-event signal on main window,
	not destroy.

2003-06-28  Robert Mibus  <mibus@handhelds.org>

	* main.c: Stop people from clocking in/out if they are already in/out

2003-05-09  Philip Blundell  <philb@gnu.org>

	* Makefile (LINGUAS): Add ro.
	* po/ro.po: New file, courtesy Laurentiu Buzdugan.

2003-04-21  Philip Blundell  <philb@gnu.org>

	* Version 0.12 released.

2003-04-21  Philip Blundell  <philb@gnu.org>

	* Makefile (clean): Remove .desktop file.

	* main.c (main): Call bind_textdomain_codeset.

2003-04-21  Philip Blundell  <philb@gnu.org>

	* Makefile (LINGUAS): Add fr.
	* po/fr.po: New file, courtesy Luc Pionchon.

2003-04-20  Philip Blundell  <philb@gnu.org>

	* Makefile (LINGUAS): Add zh_TW.
	* po/zh_TW.po: New file, courtesy Chao-Hsiung Liao.

2003-03-23  Colin Marquardt  <colin@marquardt-home.de>

	* Makefile (install-program): New name for 'install' ('install' is
	now provided by Makefile.dpkg_ipkg).  
	(CVSBUILD): New variable.
	(BUILD): New variable. Use it.	

2003-03-19  Philip Blundell  <philb@gnu.org>

	* Makefile (LINGUAS): Add pt.